index/assets/css/main.css
/* ... */
			ul.actions.fit {
				display: table;
				margin-left: -1em;
				padding: 0;
				table-layout: fixed;
				width: calc(100% + 1em);
			}

				ul.actions.fit li {
					display: table-cell;
					padding: 0 0 0 1em;
				}

					ul.actions.fit li > * {
						margin-bottom: 0;
					}

				ul.actions.fit.small {
					margin-left: -0.5em;
					width: calc(100% + 0.5em);
				}

					ul.actions.fit.small li {
						padding: 0 0 0 0.5em;
					}

			@media screen and (max-width: 480px) {

				ul.actions {
					margin: 0 0 2em 0;
				}

					ul.actions li {
						padding: 1em 0 0 0;
						display: block;
						text-align: center;
						width: 100%;
					}

						ul.actions li:first-child {
							padding-top: 0;
						}

						ul.actions li > * {
							width: 100%;
							margin: 0 !important;
						}

							ul.actions li > *.icon:before {
								margin-left: -2em;
							}

					ul.actions.small li {
						padding: 0.5em 0 0 0;
					}

						ul.actions.small li:first-child {
							padding-top: 0;
						}

			}

	dl {
		margin: 0 0 2em 0;
	}

		dl dt {
			display: block;
			font-weight: 700;
			margin: 0 0 1em 0;
		}

		dl dd {
			margin-left: 2em;
		}

/* Section/Article */

	section.special, article.special {
		text-align: center;
	}

	header p {
		color: #aaa;
		position: relative;
		margin: 0 0 1.5em 0;
		text-transform: uppercase;
	}

	header h2 + p {
		font-size: 1.25em;
		margin-top: -1em;
		line-height: 1.5em;
	}

	header h3 + p {
		font-size: 1.1em;
		margin-top: -0.8em;
		line-height: 1.5em;
	}

	header h4 + p,
	header h5 + p,
	header h6 + p {
		font-size: 0.9em;
		margin-top: -0.6em;
		line-height: 1.5em;
	}

	header.major {
		margin: 0 0 6em 0;
	}

		header.major h2 {
			font-size: 3em;
		}

		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
			display: inline-block;
			margin: 0 0 0.8em;
		}

		header.major p {
			font-size: 1.7em;
			margin-bottom: 0;
		}

	@media screen and (max-width: 1280px) {

		header.major {
			margin-bottom: 4em;
		}

			header.major h2 {
				font-size: 2.5em;
			}

			header.major p {
				font-size: 1.3em;
			}

	}

	@media screen and (max-width: 980px) {

		header.major h2 {
			font-size: 2em;
		}

		header.major p {
			font-size: 1.1em;
		}

	}

	@media screen and (max-width: 736px) {

		header.major {
			margin-bottom: 2em;
		}

	}

	@media screen and (max-width: 480px) {

		header.major h2 {
			font-size: 1.75em;
		}

	}

/* Table */

	.table-wrapper {
		-webkit-overflow-scrolling: touch;
		overflow-x: auto;
	}

	table {
		margin: 0 0 2em 0;
		width: 100%;
	}

		table tbody tr {
			border: solid 1px rgba(144, 144, 144, 0.25);
			border-left: 0;
			border-right: 0;
		}

			table tbody tr:nth-child(2n + 1) {
				background-color: rgba(144, 144, 144, 0.075);
			}

		table td {
			padding: 0.75em 0.75em;
		}

		table th {
			color: #484848;
			font-size: 0.9em;
			font-weight: 700;
			padding: 0 0.75em 0.75em 0.75em;
			text-align: left;
		}

		table thead {
			border-bottom: solid 2px rgba(144, 144, 144, 0.25);
		}

		table tfoot {
			border-top: solid 2px rgba(144, 144, 144, 0.25);
		}

		table.alt {
			border-collapse: separate;
		}

			table.alt tbody tr td {
				border: solid 1px rgba(144, 144, 144, 0.25);
				border-left-width: 0;
				border-top-width: 0;
			}

				table.alt tbody tr td:first-child {
					border-left-width: 1px;
				}

			table.alt tbody tr:first-child td {
				border-top-width: 1px;
			}

			table.alt thead {
				border-bottom: 0;
			}

			table.alt tfoot {
				border-top: 0;
			}

/* Wrapper */

	body.is-touch .wrapper.style3 {
		background-attachment: scroll;
	}

	.wrapper {
		padding: 6em 0 4em 0;
	}

		.wrapper > .inner {
			margin: 0 auto;
			width: 60em;
		}

		.wrapper.style2 {
			background-color: #f6f6f6;
		}

		.wrapper.style3 {
			background-attachment: fixed;
			background-image: url("images/overlay.png"), url("../img/banner.jpg");
			background-position: center center;
			background-size: cover;
		}

			.wrapper.style3 header.major {
				margin-bottom: 3em;
			}

				.wrapper.style3 header.major h2 {
					color: #ffffff;
				}

				@media screen and (max-width: 1280px) {

					.wrapper.style3 header.major {
						margin-bottom: 2em;
					}

				}

		@media screen and (max-width: 980px) {

			.wrapper {
				padding: 4em 0 2em 0;
			}

		}

		@media screen and (max-width: 736px) {

			.wrapper {
				padding: 3em 0 1em 0;
			}

		}

		@media screen and (max-width: 480px) {

			.wrapper {
				padding: 2em 0 0.1em 0;
			}

		}

/* Header */

	#header {
		background-color: #fff;
		border-bottom: solid 1px rgba(144, 144, 144, 0.25);
		box-shadow: 0px 0.0375em 0.125em 0px rgba(0, 0, 0, 0.05);
		color: #484848;
		cursor: default;
		font-size: 1.25em;
		height: 4.5em;
		left: 0;
		line-height: 4.4em;
		position: fixed;
		text-transform: uppercase;
		top: 0;
		width: 100%;
		z-index: 10000;
		z-index: 10001;
	}

		#header h1 {
			color: #484848;
			font-weight: 400;
			height: inherit;
			left: 1.25em;
			line-height: inherit;
			margin: 0;
			padding: 0;
			position: absolute;
			top: 0;
		}

		#header nav {
			height: inherit;
			line-height: inherit;
			position: absolute;
			right: 1.25em;
			top: 0;
			vertical-align: middle;
		}

			#header nav ul {
				list-style: none;
				margin: 0;
				padding-left: 0;
			}

				#header nav ul li {
					border-radius: 4px;
					display: inline-block;
					margin-left: 2.5em;
					padding-left: 0;
				}

					/* #header nav ul li a {
						-moz-transition: color 0.2s ease-in-out;
						-webkit-transition: color 0.2s ease-in-out;
						-ms-transition: color 0.2s ease-in-out;
						transition: color 0.2s ease-in-out;
						color: #666;
						display: inline-block;
						text-decoration: none;
					} */

						/* #header nav ul li a:hover {
							color: #484848;
						} */

					#header nav ul li:first-child {
						margin-left: 0;
					}
/* ... */

